Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-18862

Keyboard search inconsistency in QTreeView

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.13.0 Alpha 1
    • 4.7.2, 5.11.1
    • Widgets: Itemviews
    • None
    • 7fafeb4a3464f8f5dfaef77d2a0c9544c4600192

      When changing the current item via a keyboard search, the new current item is selected in all item views except QTreeView (provided the selection mode is not SingleSelection). A small example program is attached to this report.

      I've proposed a fix for this issue (including a unit test) at
      http://qt.gitorious.org/qt/qt/merge_requests/1003

      Another problem is that a subsequent selection with the mouse will select the wrong items because currentSelectionStartIndex is not set correctly with the current implementation in QTreeView

        1. test.cpp
          2 kB
        2. qtbug18862.zip
          2 kB
        For Gerrit Dashboard: QTBUG-18862
        # Subject Branch Project Status CR V

            chehrlic Christian Ehrlicher
            freininghaus Frank Reininghaus
            Votes:
            3 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes